# SparkSystem

./: CMakeLists.txt  README.md  conandata.yml  main.cpp
.github/workflows/: ci.yml
include/: Component.h  Component.tpp  ComponentManager.h  ComponentManager.tpp  Coordinator.h  Coordinator.tpp  Entity.h  EntityFactory.h  EntityManager.h  EntityManager.tpp  EventDispatcher.h  HierarchySystem.h  MovementSystem.h  NodeSystem.h  PhysicSystem.h  RenderingSystem.h  System.h  SystemManager.h  SystemManager.tpp  TransformManager.h  Window.h  World.h  World.tpp
include/components/: Drawable.h  Node.h  Position.h  Shape.h  Velocity.h
src/: Component.cpp  ComponentManager.cpp  Coordinator.cpp  Entity.cpp  EntityFactory.cpp  EntityManager.cpp  EventDispatcher.cpp  HierarchySystem.cpp  MovementSystem.cpp  NodeSystem.cpp  RenderingSystem.cpp  SystemManager.cpp  TransformManager.cpp  Window.cpp  World.cpp
test/: ecs_tests.cpp
